# sg3_utils

./: .gitignore  AUTHORS  BSD_LICENSE  CHANGELOG  COPYING  COVERAGE  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.asroot  Makefile.freebsd  Makefile.in  Makefile.mingw  Makefile.osf1  Makefile.solaris  Makefile.win32  README  README.details  README.freebsd  README.iscsi  README.sg_start  README.solaris  README.tru64  README.win32  TODO  aclocal.m4  bootstrap  build_debian.sh  config.h.in  configure  configure.ac  isosize.8  isosize.c  llseek.c  llseek.h  make_no_lib.sh  make_no_lib_freebsd.sh  make_no_lib_solaris.sh  (+123 more)
archive/: Makefile  README  align_b4_memalign.c  isosize.8  llseek.c  llseek.h  o_scsi_logging_level  rescan-scsi-bus.sh  scsi_devfs_scan.8  scsi_devfs_scan.c  sdparm.8  sdparm.c  sg3_utils_123o.spec  sg_bus_xfer.c  sg_dd2048.c  sg_dd512.c  sg_dd_old.c  sg_debug.c  sg_err.h  sg_hold.c  sg_json_writer.c  sg_json_writer.h  sg_lib.h  sg_poll.c  sg_reset.c  sg_simple0.c  sg_simple_andre.c  sgq_dd.c  sgq_dd.c.orig  sgq_old_dd.c  sgs_dd.c  xsgp_dd.c
debian/: README.debian4  changelog  control  copyright  docs  libsgutils1-0-dev.dirs  libsgutils1-0-dev.install  libsgutils1.postrm  libsgutils2-dev.install  rules  sg3-utils.examples  sg3-utils.install  sg3-utils.preinst
doc/: Makefile.am  Makefile.in  README  README.doc  rescan-scsi-bus.sh.8  scsi_logging_level.8  scsi_mandat.8  scsi_readcap.8  scsi_ready.8  scsi_satl.8  scsi_start.8  scsi_stop.8  scsi_temperature.8  sg3_utils.8  sg3_utils.html  sg3_utils_json.8  sg_bg_ctl.8  sg_compare_and_write.8  sg_copy_results.8  sg_dd.8  sg_dd.html  sg_decode_sense.8  sg_emc_trespass.8  sg_format.8  sg_get_config.8  sg_get_elem_status.8  sg_get_lba_status.8  sg_ident.8  sg_inq.8  sg_io.html  sg_logs.8  sg_luns.8  sg_map.8  sg_map26.8  sg_modes.8  sg_opcodes.8  sg_persist.8  sg_prevent.8  sg_raw.8  sg_rbuf.8  (+58 more)
examples/: Makefile  Makefile.cplus  Makefile.freebsd  README  bsg_queue_tst.c  forwarded_sense.txt  nvme_dev_self_test.hex  nvme_write_ctl.hex  reassign_addr.txt  ref_sense.txt  scsi_inquiry.c  sdiag_sas_p0_cjtpat.txt  sdiag_sas_p0_prbs9.txt  sdiag_sas_p1_cjtpat.txt  sdiag_sas_p1_idle.txt  sdiag_sas_p1_prbs15.txt  sdiag_sas_p1_stop.txt  sg__sat_identify.c  sg__sat_phy_event.c  sg__sat_set_features.c  sg_compare_and_write.txt  sg_err.h  sg_excl.c  sg_io_linux.h  sg_io_linux.hh  sg_iovec_tst.c  sg_lib.h  sg_linux_inc.h  sg_persist_tst.sh  sg_pt.h  sg_pt.hh  sg_queue_tst.c  sg_sat_chk_power.c  sg_sat_identify.c  sg_sat_phy_event.c  sg_sat_set_features.8  sg_sat_set_features.c  sg_sat_smart_rd_data.c  sg_sense_test.c  sg_simple1.c  (+14 more)
getopt_long/: getopt.h  getopt_long.c
html/: sg_dd.html  u_index.html
include/: Makefile.am  Makefile.in  freebsd_nvme_ioctl.h  sg_cmds.h  sg_cmds_basic.h  sg_cmds_extra.h  sg_cmds_mmc.h  sg_io_linux.h  sg_json.h  sg_json_sense.h  sg_json_sg_lib.h  sg_lib.h  sg_lib_data.h  sg_lib_names.h  sg_linux_inc.h  sg_pr2serr.h  sg_pt.h  sg_pt_linux.h  sg_pt_linux_missing.h  sg_pt_nvme.h  sg_pt_win32.h  sg_unaligned.h
inhex/: README  descriptor_sense.hex  fixed_sense.hex  forwarded_sense.hex  get_elem_status.hex  get_lba_status.hex  inq_standard.hex  inq_standard.raw  logs_last_n.hex  logs_sdeb_aa.hex  luns_lu_cong.hex  luns_wlun.hex  modes_mm_sdeb.hex  modes_sdeb.hex  nvme_identify_ctl.hex  nvme_read_ctl.hex  nvme_read_oob_ctl.hex  nvme_write_ctl.hex  opcodes.hex  readcap_zbc.hex  ref_sense.hex  rep_density.hex  rep_density_media.hex  rep_density_media_typem.hex  rep_density_typem.hex  rep_realms.hex  rep_zdomains.hex  rep_zones.hex  ses_areca_all.hex  tst_script.sh  vpd_bdce.hex  vpd_consistuents.hex  vpd_constituents.hex  vpd_cpr.hex  vpd_dev_id.hex  vpd_di_all.hex  vpd_fp.hex  vpd_lbpro.hex  vpd_lbpv.hex  vpd_ref.hex  (+7 more)
lib/: BSD_LICENSE  Makefile.am  Makefile.in  sg_cmds_basic.c  sg_cmds_basic2.c  sg_cmds_extra.c  sg_cmds_mmc.c  sg_io_linux.c  sg_json.c  sg_json_builder.c  sg_json_builder.h  sg_json_sense.c  sg_json_sg_lib.c  sg_lib.c  sg_lib_data.c  sg_lib_names.c  sg_pr2serr.c  sg_pt_common.c  sg_pt_dummy.c  sg_pt_freebsd.c  sg_pt_haiku.c  sg_pt_linux.c  sg_pt_linux_nvme.c  sg_pt_netbsd.c  sg_pt_osf1.c  sg_pt_solaris.c  sg_pt_win32.c
lib_no_lib/: Makefile.no_lib  sg3_utils.spec.lib  sg3_utils.spec.no_lib
no_lib/: Makefile.freebsd  Makefile.linux  Makefile.linux_static  Makefile.no_lib  Makefile.osf1  Makefile.solaris  Makefile.win32  sg3_utils.spec  sg3_utils.spec.no_lib
pre_configure/: INSTALL_pre  Makefile.asroot  debian_rules
scripts/: 00-scsi-sg3_config.rules  40-usb-blacklist.rules  54-before-scsi-sg3_id.rules  55-scsi-sg3_id.rules  58-scsi-sg3_symlink.rules  59-fc-wwpn-id.rules  59-scsi-cciss_id.rules  59-scsi-sg3_utils.rules  Makefile.am  Makefile.in  README  cciss_id  fc_wwpn_id  lunmask.service  rescan-scsi-bus.sh  sas_disk_blink  scsi-enable-target-scan.sh  scsi_logging_level  scsi_mandat  scsi_readcap  scsi_ready  scsi_satl  scsi_start  scsi_stop  scsi_temperature
src/: BSD_LICENSE  Makefile.am  Makefile.in  sg_bg_ctl.c  sg_compare_and_write.c  sg_copy_results.c  sg_dd.c  sg_decode_sense.c  sg_emc_trespass.c  sg_format.c  sg_get_config.c  sg_get_elem_status.c  sg_get_lba_status.c  sg_ident.c  sg_inq.c  sg_inq_data.c  sg_logs.c  sg_logs.h  sg_logs_vendor.c  sg_luns.c  sg_map.c  sg_map26.c  sg_modes.c  sg_opcodes.c  sg_persist.c  sg_prevent.c  sg_raw.c  sg_rbuf.c  sg_rdac.c  sg_read.c  sg_read_attr.c  sg_read_block_limits.c  sg_read_buffer.c  sg_read_long.c  sg_readcap.c  sg_reassign.c  sg_referrals.c  sg_rem_rest_elem.c  sg_rep_density.c  sg_rep_pip.c  (+50 more)
suse/: _service  build_pkg  sg3_utils.changes  sg3_utils.spec
testing/: Makefile  Makefile.cplus  Makefile.cplus_fb  Makefile.cyg  Makefile.freebsd  README  bsg_queue_tst.c  random_write_cp_verify.sh  sg_chk_asc.c  sg_iovec_tst.c  sg_iovec_tst.cpp  sg_json_builder_test.c  sg_mrq_dd.cpp  sg_persist_tst.sh  sg_queue_tst.c  sg_scat_gath.cpp  sg_scat_gath.h  sg_sense_test.c  sg_take_snap.c  sg_tst_async.cpp  sg_tst_bidi.c  sg_tst_context.cpp  sg_tst_excl.cpp  sg_tst_excl2.cpp  sg_tst_excl3.cpp  sg_tst_ioctl.c  sg_tst_nvme.c  (+6 more)
(+21 files in other folders)
