
if OS_LINUX

bin_SCRIPTS = scsi_logging_level scsi_mandat scsi_readcap scsi_ready \
	      scsi_satl scsi_start scsi_stop scsi_temperature

endif

if OS_WIN32_MINGW

bin_SCRIPTS = scsi_logging_level scsi_mandat scsi_readcap scsi_ready \
	      scsi_satl scsi_start scsi_stop scsi_temperature

endif

if OS_WIN32_CYGWIN

bin_SCRIPTS = scsi_logging_level scsi_mandat scsi_readcap scsi_ready \
	      scsi_satl scsi_start scsi_stop scsi_temperature

endif

if OS_FREEBSD

bin_SCRIPTS = scsi_logging_level scsi_mandat scsi_readcap scsi_ready \
	      scsi_satl scsi_start scsi_stop scsi_temperature

endif

if OS_SOLARIS

bin_SCRIPTS = scsi_logging_level scsi_mandat scsi_readcap scsi_ready \
	      scsi_satl scsi_start scsi_stop scsi_temperature

endif

if OS_OSF

bin_SCRIPTS = scsi_logging_level scsi_mandat scsi_readcap scsi_ready \
	      scsi_satl scsi_start scsi_stop scsi_temperature

endif
